@@ -5,16 +5,21 @@
 #include <unistd.h>
 #include <dirent.h>
 #include <sys/stat.h>
+#include <limits.h>
 
 int main(int argc, char **argv)
 {
-    char buf[ESD_BUF_SIZE];
+    octet buf[ESD_BUF_SIZE];
     int sock = -1, rate = ESD_DEFAULT_RATE;
     int length = 0, total = 0, arg = 0;
 
     int bits = ESD_BITS16, channels = ESD_STEREO;
-    int mode = ESD_STREAM, func = ESD_PLAY ;
+    int mode = ESD_STREAM, func = ESD_PLAY;
     esd_format_t format = 0;
+
+    int half = 0, twice = 0;
+    signed short* data;
+    int samp;
 
     FILE *target = NULL;
     char *host = NULL;
@@ -23,8 +28,9 @@ int main(int argc, char **argv)
     {
 	if (!strcmp("-h",argv[arg]))
 	{
-	    printf("usage:\n\t%s [-s server ][-b] [-m] [-r freq] < file\n",
-		   argv[0]);
+	    printf( "usage:\n" );
+	    printf( "\t%s [-s server ][-b] [-m] [-r freq] [-half|-double] [file]\n",
+		    argv[0]);
 	    exit(0);
 	}
 	else if ( !strcmp( "-s", argv[ arg ] ) )
@@ -39,6 +45,11 @@ int main(int argc, char **argv)
 	    rate = atoi( argv[ arg ] );
 	} else if (target) {
 	    printf("%s: ignoring extra file '%s'\n", argv[0], argv[arg]);
+	} else if ( !strcmp( "-half", argv[ arg ] ) ) {
+	    half = 1;
+	    printf( "halving data\n" );
+	} else if ( !strcmp( "-double", argv[ arg ] ) ) {
+	    twice = 1;
 	} else {
 	    target = fopen( argv[arg], "w" );
 	    if (!target) {
@@ -64,14 +75,37 @@ int main(int argc, char **argv)
     while ( ( length = read( sock, buf, ESD_BUF_SIZE ) ) > 0 )
     {
 	/* fprintf( stderr, "read %d\n", length ); */
-	if ( length > 0 ) {
-	    if( target && ( fwrite( buf, 1, length, target ) <= 0 ) )
-		return 1;
-	    write( sock, buf, length );
-	    printf( "\rtotal bytes streamed: %d", total );
-	    fflush( stdout );
-	    total += length;
+	if ( length < 0 ) 
+	    break;
+
+	/* half the data if desired */
+	if ( half ) {
+	    data = (signed short *) buf;
+	    while ( (octet *) data < buf + length ) {
+		samp = *data / 2; 
+		*data = samp; 
+		data++;
+	    }
 	}
+
+	/* double the data if desired */
+	if ( twice ) {
+	    data = (signed short *) buf;
+	    while ( (octet *) data < buf + length ) {
+		samp = *data * 2; 
+		*data = ( samp > SHRT_MAX ) ? SHRT_MAX : samp;
+		data++;
+	    }
+	}
+
+	/* share the altered data */	
+	if( target && ( fwrite( buf, 1, length, target ) <= 0 ) )
+	    return 1;
+	write( sock, buf, length );
+
+	printf( "\rtotal bytes streamed: %d", total );
+	fflush( stdout );
+	total += length;
     }
     close( sock );
     
